--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class= "ui large header">
             <h1> Rock Paper Scissors </h1>
+            <p> <span id= "gameDisplay"></span></p>
         </div>
         
     </header>
